<resources>

    <string name="app_name">iMarS</string>
    <string name="retry">RETRY</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? <font color='#334084'><b>sign up</b></font></string>
    <string name="more">More</string>
    <string name="agents">Agents</string>
    <string name="vessels">Vessels</string>
    <string name="appoint">Appoint</string>
    <string name="appoint_surveyor">Appoint Surveyor</string>
    <string name="surveys">Surveys</string>
    <string name="calendar">Calendar</string>
    <string name="services">Services</string>
    <string name="ports">Ports</string>
    <string name="my_surveys">My Surveys</string>
    <string name="no_record_found">No record found!</string>

    <string name="service_header_text">Go to <u>www.imarinesurvey.com</u> to set up and manage your services.</string>
    <string name="port_header_text">Go to <u>www.imarinesurvey.com</u> to set up and manage your port.</string>
    <string name="dummy_text">Surveyor accept your request successfully.</string>

    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
