<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:visibility="gone">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@drawable/background"
                android:contentInsetStart="0dp"
                android:elevation="@dimen/_8sdp"
                android:titleTextColor="@color/white"
                app:contentInsetStart="0dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/imvNotifications"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:background="@drawable/notification"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/toolbarTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/my_surveys"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp" />

                    <ImageView
                        android:id="@+id/imvSearch"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:layout_toLeftOf="@+id/imvFilter"
                        android:background="@drawable/search" />

                    <ImageView
                        android:id="@+id/imvFilter"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/_10sdp"
                        android:background="@drawable/filter" />

                </RelativeLayout>


            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>

        <View
            android:id="@+id/viewLine"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:visibility="gone" />

        <FrameLayout

            android:id="@+id/frame_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/llBottom"
            android:layout_below="@+id/appBar"
            android:layout_weight="1"
            android:animateLayoutChanges="true"
            android:background="@color/white">

        </FrameLayout>

        <LinearLayout
            android:id="@+id/llBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/tabgrey"
            android:orientation="horizontal"
            android:paddingTop="@dimen/_5sdp"
            android:paddingBottom="@dimen/_5sdp">

            <LinearLayout
                android:id="@+id/llSurveys"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/imvSurveys"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/surveys_select" />

                <TextView
                    android:id="@+id/txtSurveys"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center|bottom"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="@string/surveys"
                    android:textColor="@color/grey_700"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

            <LinearLayout
                android:visibility="visible"
                android:id="@+id/llAppoint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/imvAppoint"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/agents_unselect" />

                <TextView
                    android:id="@+id/txtAppoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center|bottom"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="@string/services"
                    android:textColor="@color/grey_700"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>


            <RelativeLayout
                android:visibility="visible"
                android:id="@+id/llVessels"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/_5sdp">


                <ImageView
                    android:id="@+id/imvVessels"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/vessels_unselect" />

                <TextView
                    android:id="@+id/txtVessels"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imvVessels"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center|bottom"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="@string/ports"
                    android:textColor="@color/grey_700"
                    android:textSize="@dimen/_10sdp" />

                <RelativeLayout
                    android:id="@+id/rlNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/txtNotificationCount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="@dimen/_15sdp"
                        android:background="@drawable/bg_notification_count"
                        android:padding="@dimen/_4sdp"
                        android:text="0"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_10sdp" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/llAgents"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/imvAgents"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/calendra_unselect" />

                <TextView
                    android:id="@+id/txtAgents"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center|bottom"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="@string/calendar"
                    android:textColor="@color/grey_700"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llMore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/_5sdp">

                <ImageView
                    android:id="@+id/imvMore"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentTop="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:padding="@dimen/_2sdp"
                    android:src="@drawable/more_unselect" />

                <TextView
                    android:id="@+id/txtMore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppins_regular"
                    android:gravity="center|bottom"
                    android:paddingTop="@dimen/_5sdp"
                    android:text="@string/more"
                    android:textColor="@color/grey_700"
                    android:textSize="@dimen/_10sdp" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
